# ssz-arena

./: .gitignore  Cargo.toml  README.md  criterion.toml
benches/: alloc.rs  arena.rs  checkpointz.rs  divan.rs  test_struct.rs  wall_time.rs
src/: beacon_block.rs  beacon_state.rs  checkpointz.rs  lib.rs  tx_opaque.rs
